# VERITAS

./: .gitignore  PITCH.md  README.md  railway.json
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260403_01_initial_schema.py  20260404_02_add_banner_url.py  20260404_03_add_employer_api_keys.py
backend/app/: main.py  settings.py
backend/app/api/: admin_routes.py  auth.py  employer_routes.py  issuer_routes.py  public_routes.py  schemas.py  server.py  student_routes.py  university_routes.py  v1.py
backend/app/api/services/: blockchain_service.py  bulk_diploma_import.py  change_login.py  delete_profile_service.py  diploma_crypto.py  diploma_ops.py  email_service.py  issuer_registration_service.py  login_service.py  login_yandex_service.py  logout_service.py  org_verification.py  refresh_service.py  registration_service.py  reset_password_service.py  university_registration_service.py  verify_service.py
backend/app/db/: models.py  postgres.py  redis_setup.py
backend/app/db/postgres/: models.py  postgres.py
backend/app/utils/: config.py  cookies.py  credits_checker.py  dependencies.py  jwt.py  refresh_tokens.py  role_deps.py  security.py  tokens.py
backend/migrations/: env.py
backend/migrations/versions/: 52eb710cb897_init.py  a1f3c2d4e5b6_add_share_recipient.py  b2e4f6a8c0d1_add_document_type.py  c3f5a7b9d2e4_issuer_unification.py  d4e6b8c0f1a2_nullable_qualification_gpa.py
blockchain/: README.md  (+2 more)
(+50 files in other folders)
